# LinkPilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.ja-JP.md  README.md  README.zh-TW.md  README.zh.md  SECURITY.md
.agents/skills/add-config-capability/: SKILL.md
.claude/skills/add-config-capability/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/dmg/: dmg-background.tiff
apps/desktop/scripts/: patch-info-plist.sh
apps/desktop/src/: App.tsx  index.html  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist.tmpl  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: dispatch.rs  ipc_host.rs  lib.rs  main.rs  nmh_supervisor.rs  picker.rs  state.rs  suggestions.rs  tray.rs  url_handler.rs
apps/desktop/src-tauri/src/commands/: mod.rs
apps/desktop/src/components/: ActivityCard.tsx  AdvancedJsonEditor.tsx  AppIcon.tsx  AppPickerButton.tsx  BrowserBadge.tsx  EmptyState.tsx  Explanation.tsx  RuleEditor.tsx  SuggestionsPanel.tsx  TargetEditor.tsx  WhenDisplay.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx  tooltip.tsx
apps/desktop/src/i18n/: index.ts  languages.ts
apps/desktop/src/i18n/locales/en/: app.json  browsers.json  common.json  inspector.json  menuBar.json  onboarding.json  picker.json  rules.json  settings.json  suggestions.json  testUrl.json  tray.json  workspace.json
apps/desktop/src/i18n/locales/ja-JP/: app.json  browsers.json  common.json  inspector.json  menuBar.json  onboarding.json  picker.json  rules.json  settings.json  suggestions.json  testUrl.json  tray.json  workspace.json
apps/desktop/src/i18n/locales/zh-CN/: app.json  browsers.json  common.json  inspector.json  menuBar.json  onboarding.json  picker.json  rules.json  settings.json  suggestions.json  testUrl.json  tray.json  workspace.json
apps/desktop/src/i18n/locales/zh-TW/: app.json  browsers.json  common.json  inspector.json  menuBar.json  onboarding.json  picker.json  rules.json  settings.json  suggestions.json  testUrl.json  tray.json  workspace.json
apps/desktop/src/lib/: browsers.ts  ipc.ts  theme.ts  types.ts  update.ts  utils.ts
apps/desktop/src/onboarding/: OnboardingFlow.tsx
apps/desktop/src/pages/: browsers.tsx  inspector.tsx  menu-bar.tsx  rules.tsx  settings.tsx  test-url.tsx  workspace.tsx
apps/desktop/src/picker/: PickerWindow.tsx  picker.css
apps/desktop/src/picker/halo/: HaloBezel.tsx  HaloCrown.tsx  HaloFrosted.tsx  HaloPreview.tsx  HaloShell.tsx  NumberBadges.tsx  PickerStyleChooser.tsx  ProfileOrderEditor.tsx  geometry.ts  types.ts
apps/desktop/src/styles/: app.css
apps/desktop/src/tray/: TrayPopover.tsx
apps/extension/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: daemon_subcommand_smoke.rs  history_subcommand_smoke.rs
crates/core/: Cargo.toml
crates/core/src/: browser.rs  config.rs  daemon.rs  endpoint.rs  history.rs  inventory.rs  lib.rs  observations.rs  platform.rs  protocol.rs  routing.rs  rules.rs
crates/core/src/config/: mod.rs  store.rs
crates/core/tests/: dsl_roundtrip.rs
crates/headless-daemon/: Cargo.toml
crates/headless-daemon/src/: main.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs  path.rs  server.rs  transport.rs
crates/ipc/tests/: route_history_roundtrip.rs  stale_socket_cleanup.rs  unknown_verb_fallback.rs
crates/native-host/: Cargo.toml
crates/native-host/src/: main.rs
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs
crates/platform-mac/: Cargo.toml
crates/platform-mac/src/: app_icon.rs  app_picker.rs  autostart.rs  default_browser.rs  inventory.rs  launch_agent.rs  launcher.rs  lib.rs  notifier.rs  opener.rs  prompt.rs
crates/platform-win/: Cargo.toml
crates/platform-win/src/: lib.rs
docs/: linkpilot-design-v0.1.md  linkpilot-design-v0.2.md  migration-v0.1-to-v0.2.md
docs/release-notes/: v0.2.0.md
packaging/: m6-release-checklist.md
packaging/homebrew/: README.md
packaging/homebrew/Casks/: linkpilot.rb
packaging/homebrew/Formula/: linkpilot-cli.rb
rules/: conventional-commits.md  frontend-product-page.md
scripts/: m4-verify.sh
site/: index.html
tools/icon-padder/: Cargo.toml
tools/icon-padder/src/: main.rs
