[package]
name = "linkpilot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The `lp` command-line client for LinkPilot."

[[bin]]
name = "lp"
path = "src/main.rs"

[dependencies]
linkpilot-core = { workspace = true }
linkpilot-ipc = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
linkpilot-platform-mac = { workspace = true }
