[package]
name = "linkpilot-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The `lp` command-line client for LinkPilot."

[[bin]]
name = "lp"
path = "src/main.rs"

[dependencies]
linkpilot-core = { workspace = true }
linkpilot-ipc = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
linkpilot-platform-mac = { workspace = true }
# `lp daemon stop` SIGTERMs the PID file's process; `lp daemon start`
# setsid() to detach the spawned daemon. Both are POSIX-only, so libc
# is target-scoped (we'd rather not pull it on the Windows stub path).
libc = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
