[package]
name = "linkpilot-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core domain model, routing engine, and platform traits for LinkPilot."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }

[target.'cfg(unix)'.dependencies]
# `kill(pid, 0)` for daemon PID-file liveness probing (see daemon.rs).
libc = "0.2"
