[package]
name = "linkpilot-headless-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone macOS daemon binary — owns the routing engine, config store, and IPC server when no Tauri shell is running."

[[bin]]
name = "linkpilot-daemon"
path = "src/main.rs"

[dependencies]
linkpilot-core = { workspace = true }
linkpilot-ipc = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
linkpilot-platform-mac = { workspace = true }
