[package]
name = "linkpilot-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cross-platform IPC transport (Unix socket / Named pipe) for LinkPilot."

[dependencies]
linkpilot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
