[package]
name = "linkpilot-native-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native Messaging Host: stdio bridge between browser extensions and the LinkPilot daemon."

[[bin]]
name = "linkpilot-native-host"
path = "src/main.rs"

[dependencies]
linkpilot-core = { workspace = true }
linkpilot-ipc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
