[package]
name = "linkpilot-platform-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS implementation of the LinkPilot platform traits."

[dependencies]
linkpilot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
