[package]
name = "linkpilot-platform-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS implementation of the LinkPilot platform traits."

[dependencies]
linkpilot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
objc2 = "0.5"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
